<resources>
    <string name="app_name">Make Studio</string>

    <!--UI Auth Strings-->
    <string name="verifyNumber">Verifica tu número de teléfono</string>
    <string name="messageSend">Digita el número con el que deseas regisrarte.</string>
    <string name="otpTittle">Por favor, digita el codigo.</string>


    <!--UI Home Strings-->
    <string name="menu_home">Inicio</string>
    <string name="menu_bills">Gastos</string>
    <string name="menu_models_payment">Pagos de Modelos</string>
    <string name="empty_balance">0</string>
    <string name="title_balance">Saldo Actual</string>
    <string name="new_bill">Nuevo Gasto</string>
    <string name="title_model_payment">Pago Modelos</string>
    <string name="title_new_inventory_bill">Nuevo Gasto\n Inventario</string>
    <string name="title_new_inventory">Nuevo Ingreso\n Inventario</string>
    <string name="txt_title_bills">Añadir Gastos</string>
    <string name="edt_concept">Concepto</string>
    <string name="edt_value">Valor</string>
    <string name="btn_bills_save">Guardar</string>
    <string name="btn_txt_payment_completed">Pago Finalizado</string>
    <string name="txt_total_payment">Total:</string>
    <string name="txt_range_dates_paid">Rango fechas: 25-05-2021 al 27-05-2021</string>
    <string name="title_list_bills">Mis Gastos</string>
    <string name="menu_list_bills">Mis Gastos</string>
    <string name="txt_error_post_notification">Debes aceptar los permisos\n</string>
    <string name="goto_settings">Ir a configuraciones</string>
</resources>