<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.make.develop.studio.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_nav_home_to_bills_fragment"
            app:destination="@id/bills_fragment" />
        <action
            android:id="@+id/action_nav_home_to_models_payment_fragment"
            app:destination="@id/models_payment_fragment" />
        <action
            android:id="@+id/action_nav_home_to_list_bills_nav"
            app:destination="@id/list_bills_nav" />
    </fragment>

    <fragment
        android:id="@+id/bills_fragment"
        android:name="com.make.develop.studio.ui.bills.BillsFragment"
        android:label="@string/menu_bills"
        tools:layout="@layout/fragment_bills">

    </fragment>

    <fragment
        android:id="@+id/models_payment_fragment"
        android:name="com.make.develop.studio.ui.modelspayment.ModelsPaymentFragment"
        android:label="@string/menu_models_payment"
        tools:layout="@layout/fragment_models_payment">

    </fragment>

    <fragment
        android:id="@+id/list_bills_nav"
        android:name="com.make.develop.studio.ui.listbills.ListBillsFragment"
        android:label="@string/menu_list_bills"
        tools:layout="@layout/fragment_list_bills">

    </fragment>

</navigation>